--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.2",
     "@types/jest": "^28.1.8",
+    "@types/react": "^18.0.26",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "commitizen": "^4.2.6",
@@ -43,9 +44,15 @@
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.1",
+    "react-router-dom": "^6.5.0",
     "ts-jest": "^28.0.8",
     "tsd": "^0.25.0",
+    "type-fest": "^3.4.0",
     "typescript": "^4.8.4"
   },
-  "packageManager": "yarn@3.3.0"
+  "packageManager": "yarn@3.3.0",
+  "peerDependencies": {
+    "@types/react": "*",
+    "react-router-dom": "^6.4.0"
+  }
 }
