--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "~/*": ["src/*"]
     },
     "moduleResolution": "node",
-    "outDir": "dist"
+    "outDir": "dist",
+    "jsx": "preserve"
   },
   "include": ["src"]
 }
