--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.1",
+    "react": "^18.2.0",
     "react-router-dom": "^6.5.0",
     "ts-jest": "^28.0.8",
     "tsd": "^0.25.0",
