feat(*): configure as publish

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     },
     "moduleResolution": "node",
     "outDir": "dist",
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "declaration": true
   },
   "include": ["src"]
 }
