--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-router-typing",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc -p .",
