--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "npm-pack",
+  "name": "example",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
     "react": "^18.2.0",
     "react-router-dom": "^6.5.0",
-    "react-router-typing": "^0.0.0"
+    "react-router-typing": "^0.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
