--- a/example/package.json
+++ b/example/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "vite"
+  },
   "dependencies": {
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
-    "react-router-typing": "^0.0.1"
+    "vite": "^4.0.3",
+    "vite-plugin-react": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
+    "@vitejs/plugin-react": "^3.0.0",
+    "react-router-typing": "0.0.4",
     "typescript": "^4.9.4"
   }
 }
